# YouTube-Summarizer

./: mcp_client.py  pyproject.toml  readme.md  requirements.txt  runtime.txt  transcript.txt
.devcontainer/: devcontainer.json
MCP_Client/: mcp_client.py
src/mcp_youtube/: __init__.py  mcp_youtube.py
