[project]
name = "mcp-youtube"
version = "0.1.0"
description = "MCP server for fetching YouTube transcripts"
dependencies = [
    "mcp",
    "pydantic>=2.10.2",
    "youtube_transcript_api"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
mcp-youtube = "mcp_youtube:main"
